# apted-diff

./: README.md  app.py  apted_demo.py  main.py  pyproject.toml  requirements.txt
js/: demo.html  diff.js
templates/: apted_demo.html
